--- a/ProjetWinBet/.project
+++ b/ProjetWinBet/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ProjetWeBet</name>
+	<name>ProjetWinBet</name>
 	<comment></comment>
 	<projects>
 	</projects>
